--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
-  "homepage": "https://[your-user-name].github.io/[your-repo-name]/",
+  "homepage": "https://haffedali.github.io/radiodecay-ghpages/",
 
   "scripts": {
     "start": "react-scripts start",
@@ -18,7 +18,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  
+
   "eslintConfig": {
     "extends": "react-app"
   },
